Fix the list spacing and style

--- a/css/screen.css
+++ b/css/screen.css
@@ -104,8 +104,9 @@ html{
 }
 .tabcontent ol{
 	list-style-type: upper-roman;
+	list-style: inside;
 }
-.tabcontent ol li{
+.tabcontent ol, li{
 	margin-bottom: 10px;
 }
 .tabcontent h5{
